# rizzy-lsp

./: .gitignore  README.md  pyproject.toml
rzlsp/: __init__.py  __main__.py  server.py
