[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rizzy-lsp"
version = "0.1.0"
description = "Rizzylang Language Server Protocol implementation"
requires-python = ">=3.10"

[project.scripts]
rizzylang-lsp = "rzlsp.server:main"

[tool.setuptools.packages.find]
include = ["rzlsp*"]
